--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -93,17 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3e1dd926",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_prime(...parameter here...):\n",
+    "def is_prime(number = 7):\n",
     "    # code below this line\n",
-    "    return False\n",
+    "    count = 0\n",
+    "    for i in range(1, number +1):\n",
+    "        if number % i == 0:\n",
+    "            count += 1\n",
+    "    if count < 3:\n",
+    "        check = True\n",
+    "    else:\n",
+    "        check = False\n",
+    "    return check\n",
     "    # code above this line\n",
     "\n",
-    "is_prime(18)"
+    "is_prime()"
    ]
   },
   {
@@ -260,17 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "52719fba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calc_score(...parameter here...):\n",
+    "def calc_score(win = 0, draw = 0, lose=0):\n",
     "    # code below this line\n",
-    "    return 0\n",
+    "    score = win * 3 + draw * 1 + lose*(-1)\n",
+    "    return score\n",
     "    # code above this line\n",
     "\n",
-    "calc_score(3, 0)"
+    "calc_score(3, 2, 1)"
    ]
   },
   {
@@ -327,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
