--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -24,14 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa291585",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2005 is not leap year\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2005"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_leap_year(...parameter here...):\n",
+    "def is_leap_year(y):\n",
     "    # code below this line\n",
-    "    return False\n",
+    "    if (y % 4 == 0 & y % 100 !=0) or (y % 400 == 0):\n",
+    "        print(f\"{y} is leap year\")\n",
+    "    else:\n",
+    "        print(f\"{y} is not leap year\")\n",
+    "    return y\n",
     "    # code above this line\n",
     "    \n",
     "is_leap_year(2005)"
@@ -159,14 +181,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f0b8db21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5, 8, 13]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def print_fibo_sequence(...parameter here...):\n",
+    "def print_fibo_sequence(n):\n",
+    "    fibo = [str(i) for i in range(n+1)]\n",
+    "    for i in range(n+1):    \n",
+    "        if i == 0:\n",
+    "            fibo[0] = 0\n",
+    "        elif i == 1:\n",
+    "            fibo[1] = 1\n",
+    "        else:    \n",
+    "            fibo[i] = fibo[i-1] + fibo[i-2]\n",
+    "    print(fibo[1:])\n",
     "    # code below this line\n",
-    "    pass\n",
+    "    return (fibo[1:])\n",
     "    # code above this line\n",
     "\n",
     "print_fibo_sequence(7)"
