--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -24,36 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa291585",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2005 is not leap year\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2005"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def is_leap_year(y):\n",
+    "def is_leap_year(...parameter here...):\n",
     "    # code below this line\n",
-    "    if (y % 4 == 0 & y % 100 !=0) or (y % 400 == 0):\n",
-    "        print(f\"{y} is leap year\")\n",
-    "    else:\n",
-    "        print(f\"{y} is not leap year\")\n",
-    "    return y\n",
+    "    return False\n",
     "    # code above this line\n",
     "    \n",
     "is_leap_year(2005)"
@@ -115,36 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3e1dd926",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def is_prime(number = 7):\n",
+    "def is_prime(...parameter here...):\n",
     "    # code below this line\n",
-    "    count = 0\n",
-    "    for i in range(1, number +1):\n",
-    "        if number % i == 0:\n",
-    "            count += 1\n",
-    "    if count < 3:\n",
-    "        check = True\n",
-    "    else:\n",
-    "        check = False\n",
-    "    return check\n",
+    "    return False\n",
     "    # code above this line\n",
     "\n",
-    "is_prime()"
+    "is_prime(18)"
    ]
   },
   {
@@ -200,41 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f0b8db21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 2, 3, 5, 8, 13]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 2, 3, 5, 8, 13]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def print_fibo_sequence(n):\n",
-    "    fibo = [str(i) for i in range(n+1)]\n",
-    "    for i in range(n+1):    \n",
-    "        if i == 0:\n",
-    "            fibo[0] = 0\n",
-    "        elif i == 1:\n",
-    "            fibo[1] = 1\n",
-    "        else:    \n",
-    "            fibo[i] = fibo[i-1] + fibo[i-2]\n",
-    "    print(fibo[1:])\n",
+    "def print_fibo_sequence(...parameter here...):\n",
     "    # code below this line\n",
-    "    return (fibo[1:])\n",
+    "    pass\n",
     "    # code above this line\n",
     "\n",
     "print_fibo_sequence(7)"
@@ -328,29 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "52719fba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def calc_score(win = 0, draw = 0, lose=0):\n",
+    "def calc_score(...parameter here...):\n",
     "    # code below this line\n",
-    "    score = win * 3 + draw * 1 + lose*(-1)\n",
-    "    return score\n",
+    "    return 0\n",
     "    # code above this line\n",
     "\n",
-    "calc_score(3, 2, 1)"
+    "calc_score(3, 0)"
    ]
   },
   {
@@ -407,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
