--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -127,18 +127,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "46937ae8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-21T13:05:47.126861Z",
+     "start_time": "2024-05-21T13:05:47.117823Z"
+    }
+   },
    "source": [
-    "def find_primes(...parameter here...):\n",
-    "    # code below this line\n",
-    "    pass\n",
-    "    # code above this line\n",
+    "def is_prime(n):\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
+    "def find_primes(n_start, n_end):\n",
+    "    primes = []\n",
+    "    for num in range(n_start, n_end + 1):\n",
+    "        if is_prime(num):\n",
+    "            primes.append(num)\n",
+    "    print(\" \".join(map(str, primes)))\n",
+    "\n",
+    "# Ví dụ\n",
     "find_primes(2, 24)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 5 7 11 13 17 19 23\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -297,18 +321,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f6bff52f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-21T13:06:28.027199Z",
+     "start_time": "2024-05-21T13:06:28.022610Z"
+    }
+   },
    "source": [
-    "def time_to_silicon_valey(...parameter here...):\n",
-    "    # code below this line\n",
-    "    return 0\n",
-    "    # code above this line\n",
+    "def time_to_silicon_valey(s, k):\n",
+    "    t = s / k\n",
+    "    return round(t, 2)\n",
     "\n",
-    "time_to_silicon_valey(14448, 800)"
-   ]
+    "# Ví dụ\n",
+    "print(time_to_silicon_valey(14448, 800))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.06\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "cbbc5c8cd1b18eb1"
   }
  ],
  "metadata": {
