--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -93,17 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3e1dd926",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_prime(...parameter here...):\n",
+    "def is_prime(number):\n",
     "    # code below this line\n",
-    "    return False\n",
+    "    count = 0\n",
+    "    for i in range(1, number +1):\n",
+    "        if number % i == 0:\n",
+    "            count += 1\n",
+    "    if count < 3:\n",
+    "        check = True\n",
+    "    else:\n",
+    "        check = False\n",
+    "    return check\n",
     "    # code above this line\n",
     "\n",
-    "is_prime(18)"
+    "is_prime(23)"
    ]
   },
   {
@@ -127,6 +146,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "46937ae8",
    "metadata": {
     "ExecuteTime": {
@@ -134,6 +154,15 @@
      "start_time": "2024-05-21T13:05:47.117823Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 5 7 11 13 17 19 23\n"
+     ]
+    }
+   ],
    "source": [
     "def is_prime(n):\n",
     "    if n <= 1:\n",
@@ -152,17 +181,7 @@
     "\n",
     "# Ví dụ\n",
     "find_primes(2, 24)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 3 5 7 11 13 17 19 23\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,17 +303,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "52719fba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calc_score(...parameter here...):\n",
+    "def calc_score(win = 0, draw = 0, lose = 0):\n",
     "    # code below this line\n",
-    "    return 0\n",
+    "    score = win * 3 + draw * 1 + lose * (-1)\n",
+    "    return score\n",
     "    # code above this line\n",
     "\n",
-    "calc_score(3, 0)"
+    "calc_score(3, 0,1)"
    ]
   },
   {
@@ -321,6 +352,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "f6bff52f",
    "metadata": {
     "ExecuteTime": {
@@ -328,14 +360,6 @@
      "start_time": "2024-05-21T13:06:28.022610Z"
     }
    },
-   "source": [
-    "def time_to_silicon_valey(s, k):\n",
-    "    t = s / k\n",
-    "    return round(t, 2)\n",
-    "\n",
-    "# Ví dụ\n",
-    "print(time_to_silicon_valey(14448, 800))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -345,15 +369,22 @@
      ]
     }
    ],
-   "execution_count": 3
+   "source": [
+    "def time_to_silicon_valey(s, k):\n",
+    "    t = s / k\n",
+    "    return round(t, 2)\n",
+    "\n",
+    "# Ví dụ\n",
+    "print(time_to_silicon_valey(14448, 800))"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "cbbc5c8cd1b18eb1"
+   "id": "cbbc5c8cd1b18eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -372,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
