phong - bổ sung

--- a/Thực hành module và hàm buổi 2.ipynb
+++ b/Thực hành module và hàm buổi 2.ipynb
@@ -24,16 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa291585",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def is_leap_year(...parameter here...):\n",
+    "def is_leap_year(y):\n",
     "    # code below this line\n",
-    "    return False\n",
+    "    return(y%4 == 0 and y%100 != 0) or (y %400 == 0)\n",
     "    # code above this line\n",
     "    \n",
+    "\n",
     "is_leap_year(2005)"
    ]
   },
@@ -55,14 +67,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "813613f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def r_strip(...parameter here...):\n",
+    "def r_strip(s):\n",
     "    # code below this line\n",
-    "    return None\n",
+    "    return s.strip()\n",
+    "      \n",
     "    # code above this line\n",
     "\n",
     "r_strip('hello        ')"
@@ -202,17 +226,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0b8db21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 2 3 5 8 13 21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def print_fibo_sequence(...parameter here...):\n",
-    "    # code below this line\n",
-    "    pass\n",
+    "def print_fibo_sequence(n):\n",
+    "    f0, f1 = 0, 1\n",
+    "    for i in range(2, n):\n",
+    "        f0, f1 = f1, f0+f1\n",
     "    # code above this line\n",
-    "\n",
-    "print_fibo_sequence(7)"
+    "        print(f0, end=\" \")\n",
+    "    print(f1, f0+f1)\n",
+    "    return (f0+f1)\n",
+    "print_fibo_sequence(8)"
    ]
   },
   {
@@ -255,14 +300,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d5ad4ca8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1011"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def to_binary(...parameter here...):\n",
+    "def to_binary(n):\n",
     "    # code below this line\n",
-    "    return 0\n",
+    "    i = 0\n",
+    "    binary = 0\n",
+    "    while n>0:\n",
+    "        binary += (n%2)*(10**i)\n",
+    "        n //= 2\n",
+    "        i += 1\n",
+    "    return binary\n",
     "    # code above this line\n",
     "\n",
     "to_binary(11)"
@@ -377,14 +439,6 @@
     "# Ví dụ\n",
     "print(time_to_silicon_valey(14448, 800))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbbc5c8cd1b18eb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -403,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
